--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -407,73 +407,73 @@
       when:
         - nmstate_cfg | default(false) | bool
 
-    - name: Remove argocd CRD on openshift-gitops
-      kubernetes.core.k8s:
-        kind: ArgoCD
-        api_version: argoproj.io/v1alpha1
-        namespace: openshift-gitops
-        name: openshift-gitops
-        state: absent
-      register: removeargo
+    # - name: Remove argocd CRD on openshift-gitops
+    #   kubernetes.core.k8s:
+    #     kind: ArgoCD
+    #     api_version: argoproj.io/v1alpha1
+    #     namespace: openshift-gitops
+    #     name: openshift-gitops
+    #     state: absent
+    #   register: removeargo
 
-    - name: Get all applications on openshift-gitops
-      kubernetes.core.k8s_info:
-        kind: Application
-        api_version: argoproj.io/v1alpha1
-        namespace: openshift-gitops
-      register: application_crds
+    # - name: Get all applications on openshift-gitops
+    #   kubernetes.core.k8s_info:
+    #     kind: Application
+    #     api_version: argoproj.io/v1alpha1
+    #     namespace: openshift-gitops
+    #   register: application_crds
 
-    - name: Remove applications
-      kubernetes.core.k8s:
-        kind: Application
-        api_version: argoproj.io/v1alpha1
-        namespace: openshift-gitops
-        name: "{{ item.metadata.name }}"
-        state: absent
-      loop: "{{ application_crds.resources }}"
+    # - name: Remove applications
+    #   kubernetes.core.k8s:
+    #     kind: Application
+    #     api_version: argoproj.io/v1alpha1
+    #     namespace: openshift-gitops
+    #     name: "{{ item.metadata.name }}"
+    #     state: absent
+    #   loop: "{{ application_crds.resources }}"
 
-    - name: Remove finalizer of the applications
-      kubernetes.core.k8s:
-        kind: Application
-        api_version: argoproj.io/v1alpha1
-        namespace: openshift-gitops
-        definition:
-          metadata:
-            name: "{{ item.metadata.name }}"
-            finalizers: "{{ item.metadata.finalizers | difference(['resources-finalizer.argocd.argoproj.io']) }}"
-      loop: "{{ application_crds.resources }}"
-      when: "'resources-finalizer.argocd.argoproj.io' in item.metadata.finalizers"
+    # - name: Remove finalizer of the applications
+    #   kubernetes.core.k8s:
+    #     kind: Application
+    #     api_version: argoproj.io/v1alpha1
+    #     namespace: openshift-gitops
+    #     definition:
+    #       metadata:
+    #         name: "{{ item.metadata.name }}"
+    #         finalizers: "{{ item.metadata.finalizers | difference(['resources-finalizer.argocd.argoproj.io']) }}"
+    #   loop: "{{ application_crds.resources }}"
+    #   when: "'resources-finalizer.argocd.argoproj.io' in item.metadata.finalizers"
 
-    - name: Removing OADP projects
-      kubernetes.core.k8s:
-        state: absent
-        definition:
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: "oadp-user{{ item }}"
-      register: removeoadp
-      until: removeoadp is succeeded
-      retries: 60
-      delay: 10
-      failed_when: removeoadp is failed or removeoadp.failed
-      with_sequence: start=1 end={{ num_users }}
+    # - name: Removing OADP projects
+    #   kubernetes.core.k8s:
+    #     state: absent
+    #     definition:
+    #       apiVersion: v1
+    #       kind: Namespace
+    #       metadata:
+    #         name: "oadp-user{{ item }}"
+    #   register: removeoadp
+    #   until: removeoadp is succeeded
+    #   retries: 60
+    #   delay: 10
+    #   failed_when: removeoadp is failed or removeoadp.failed
+    #   with_sequence: start=1 end={{ num_users }}
 
-    - name: Remove Subscription OpenShift GitOps
-      kubernetes.core.k8s:
-        api_version: operators.coreos.com/v1alpha1
-        namespace: openshift-operators
-        kind: Subscription
-        name: openshift-gitops-operator
-        state: absent
+    # - name: Remove Subscription OpenShift GitOps
+    #   kubernetes.core.k8s:
+    #     api_version: operators.coreos.com/v1alpha1
+    #     namespace: openshift-operators
+    #     kind: Subscription
+    #     name: openshift-gitops-operator
+    #     state: absent
 
-    - name: Remove ClusterServiceVersion OpenShift GitOps
-      kubernetes.core.k8s:
-        api_version: operators.coreos.com/v1alpha1
-        namespace: openshift-operators
-        kind: clusterserviceversion
-        name: openshift-gitops-operator.v1.13.3
-        state: absent
+    # - name: Remove ClusterServiceVersion OpenShift GitOps
+    #   kubernetes.core.k8s:
+    #     api_version: operators.coreos.com/v1alpha1
+    #     namespace: openshift-operators
+    #     kind: clusterserviceversion
+    #     name: openshift-gitops-operator.v1.13.3
+    #     state: absent
 
     - name: New /usr/loca/bin/test-lab-performance.sh file
       ansible.builtin.template:
